# convert-image-video-to-ascii

./: .gitignore  LICENSE  README.md  setup.cfg
src/: main.py
src/images/: convert_image_to_ascii.py
src/videos/: convert_video_to_ascii.py
