[metadata]
name = convert-image-video-to-ascii
version = 0.0.1
author = Momen Sameh
author_email = momensameh5@gmail.com
description = A simple program that converts images , videos and livefeed videos to ASCII art.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mo2men-dev/convert-image-video-to-ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
keywords='video ascii ascii-art image-to-ascii video-to-ascii image PIL pillow terminal opencv'
entry_points =
    [console_scripts]
    image-video-ascii = src.main:main
